<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gov"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/pta_gov"
                android:layout_marginTop="10sp"
                android:clickable="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ministry"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/pta_ministry"
                android:layout_marginTop="5sp"
                android:clickable="false"
                android:layout_below="@+id/pta_gov"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pta_name"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/pta_name"
                android:layout_marginTop="5sp"
                android:clickable="false"
                android:layout_below="@+id/pta_ministry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pta_address"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="5sp"
                android:clickable="false"
                android:id="@+id/pta_address"
                android:layout_below="@id/pta_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_text"
                android:textSize="20sp"
                android:layout_marginTop="13sp"
                android:layout_marginLeft="15sp"
                android:gravity="center"
                android:id="@+id/phone_text"
                android:layout_below="@+id/pta_address"
                android:clickable="false"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line1"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/phone_text"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pta_phone"
                android:textSize="18sp"
                android:drawableLeft="@drawable/contact"
                android:drawablePadding="5sp"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:id="@+id/pta_phone"
                android:clickable="true"
                android:layout_below="@+id/line1"
                android:autoLink="phone"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pta_land"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:id="@+id/pta_phone1"
                android:clickable="true"
                android:layout_below="@+id/line1"
                android:layout_toRightOf="@+id/pta_phone"
                android:layout_toEndOf="@+id/pta_phone"
                android:drawableLeft="@drawable/contact"
                android:drawableStart="@drawable/contact"
                android:drawablePadding="5sp"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:autoLink="phone"
                />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fax_text"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:id="@+id/fax_text"
                android:clickable="false"
                android:layout_below="@+id/pta_phone1"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line2"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/fax_text"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pta_fax"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:id="@+id/pta_fax"
                android:clickable="false"
                android:paddingLeft="7sp"
                android:layout_below="@+id/line2"
                android:layout_marginTop="10sp"
                android:autoLink="none"
                android:textColor="@color/colorPrimary"
                android:drawableLeft="@drawable/small_fax"
                android:drawableStart="@drawable/small_fax"
                android:drawablePadding="5sp"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:id="@+id/email_text"
                android:clickable="false"
                android:layout_below="@+id/pta_fax"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line3"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/email_text"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pta_email"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:id="@+id/pta_email"
                android:clickable="true"
                android:layout_below="@+id/line3"
                android:layout_marginTop="10sp"
                android:autoLink="email"
                android:drawableLeft="@drawable/small_email"
                android:drawableStart="@drawable/small_email"
                android:drawablePadding="5dp"
                android:layout_marginLeft="12sp"
                android:layout_marginStart="12sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_text"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/website_text"
                android:clickable="false"
                android:layout_below="@+id/pta_email"
                android:layout_marginTop="12sp"
                android:layout_marginLeft="11sp"
                android:layout_marginStart="11sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line4"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/website_text"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginTop="5sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pta_website"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:id="@+id/pta_website"
                android:clickable="true"
                android:layout_below="@+id/line4"
                android:layout_marginTop="10sp"
                android:autoLink="web"
                android:drawableLeft="@drawable/small_website1"
                android:drawableStart="@drawable/small_website1"
                android:drawablePadding="5sp"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>