<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="News And Events"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_below="@+id/toolbar">

            >


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Kiran Rana Magar"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_des"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/b"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Sacar Khanal"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_dess"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/a"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Bhas Raj Patak"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_desss"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/g" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Bikash Ghimire"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_dessss"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/e"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Manoj Shrestha"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_desssss"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/d"/>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Sujit Gyawale"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_dessssss"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/c"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/blue"/>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginBottom="5dp"
                        android:text="Sudip Bajimaya"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:ellipsize="end"
                        android:maxLines="2"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/short_desssssss"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:layout_marginBottom="4dp"
                        />

                </LinearLayout>

                <ImageView
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/f"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>